modules/vpc/main.tf
resource "aws_vpc" "this" {

  cidr_block = var.vpc_cidr

  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = local.default_tags

}

resource "aws_internet_gateway" "this" {

  vpc_id = aws_vpc.this.id

  tags = merge(
    local.default_tags,
    {
      Name = "${var.vpc_name}-igw"
    }
  )

}

resource "aws_subnet" "public" {

  for_each = {
    for index, cidr in var.public_subnet_cidrs :
    index => cidr
  }

  vpc_id = aws_vpc.this.id

  cidr_block = each.value

  availability_zone = var.availability_zones[each.key]

  map_public_ip_on_launch = true

  tags = merge(
    local.default_tags,
    {
      Name = "${var.vpc_name}-public-${each.key + 1}"
      Type = "Public"
    }
  )

}

resource "aws_subnet" "private" {

  for_each = {
    for index, cidr in var.private_subnet_cidrs :
    index => cidr
  }

  vpc_id = aws_vpc.this.id

  cidr_block = each.value

  availability_zone = var.availability_zones[each.key]

  tags = merge(
    local.default_tags,
    {
      Name = "${var.vpc_name}-private-${each.key + 1}"
      Type = "Private"
    }
  )

}

resource "aws_route_table" "public" {

  vpc_id = aws_vpc.this.id

  tags = merge(
    local.default_tags,
    {
      Name = "${var.vpc_name}-public-rt"
      Type = "Public"
    }
  )

}

resource "aws_route" "public_internet" {

  route_table_id = aws_route_table.public.id

  destination_cidr_block = "0.0.0.0/0"

  gateway_id = aws_internet_gateway.this.id

}

resource "aws_route_table_association" "public" {

  for_each = aws_subnet.public

  subnet_id = each.value.id

  route_table_id = aws_route_table.public.id

}

resource "aws_eip" "nat" {

  count = var.enable_nat_gateway ? 1 : 0

  domain = "vpc"

  tags = merge(
    local.default_tags,
    {
      Name = "${var.vpc_name}-nat-eip"
    }
  )

}

resource "aws_nat_gateway" "this" {

  count = var.enable_nat_gateway ? 1 : 0

  allocation_id = aws_eip.nat[0].id

  subnet_id = values(aws_subnet.public)[0].id

  tags = merge(
    local.default_tags,
    {
      Name = "${var.vpc_name}-nat"
    }
  )

  depends_on = [
    aws_internet_gateway.this
  ]

}

resource "aws_route_table" "private" {

  count = var.enable_nat_gateway ? 1 : 0

  vpc_id = aws_vpc.this.id

  tags = merge(
    local.default_tags,
    {
      Name = "${var.vpc_name}-private-rt"
      Type = "Private"
    }
  )

}

resource "aws_route" "private_nat" {

  count = var.enable_nat_gateway ? 1 : 0

  route_table_id = aws_route_table.private[0].id

  destination_cidr_block = "0.0.0.0/0"

  nat_gateway_id = aws_nat_gateway.this[0].id

}

resource "aws_route_table_association" "private" {

  for_each = var.enable_nat_gateway ? aws_subnet.private : {}

  subnet_id = each.value.id

  route_table_id = aws_route_table.private[0].id

}
